--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site settings
 title: Hu's Space !
-name: Hu Tianyun
+name: HuTianyun
 email: tianyunhu@gmail.com
 location: Xi'an, China
 company: NWPU
-company_url: http://nwpu.edu.cn
+company_url: http://www.nwpu.edu.cn/
 github_url: https://github.com/Eacaen
 description: This is personnel website of HuTianyun
 favicon: favicon.png # Image must be in assets/images
@@ -73,7 +73,7 @@ navs:
 
 # Sidebar to show popular repo
 side_bar_repo_limit: 5 # Number of repos to show
-
+side_bar_repo_limit_about: 3 # Number of repos to show
 # Google Analytics
 analytics :
   provider : google
@@ -82,7 +82,7 @@ analytics :
 
 
 # For about.html. Fell free to create your own!
-skill_software_keywords: [Java, C, C++, Qt, Python, MySQL, Oracle, SQLite, PL/SQL, Design Patterns]
-skill_j2ee_keywords: [Spring, Struct, Hibernet, MyBatis, JSP]
-skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, AngularJS, NodeJS, ExpressJS, MongoDB, Redis, PHP, Symfony, Boostrap]
-skill_mobile_app_keywords: [Android, Sketch UI Desgin]
+skill_software_keywords: [C , C++ , Python] 
+skill_hardware_chips: [51 , STM32]
+skill_structure_keywords: [Solidworks , Catia , Anasys , ABAQUS]
+# skill_mobile_app_keywords: [Android, Sketch UI Desgin]
