--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ github_url: https://github.com/Eacaen
 description: This is personnel website of HuTianyun
 favicon: favicon.png # Image must be in assets/images
 
-# url: http://Eacaen.github.io # the base hostname & protocol for your site
+url: http://Eacaen.github.io # the base hostname & protocol for your site
 
 ## Gem
 gems:
